--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ipfs",
+  "name": "App",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.12",
+    "ipfs-http-client": "^59.0.0",
     "vue": "^2.6.14",
+    "vue-buffer": "^0.0.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
